--- a/src/main/webapp/components/Table.less
+++ b/src/main/webapp/components/Table.less
@@ -3,39 +3,49 @@ table { .margin();
 	border: none;
 	table-layout: fixed;
 	background-color: #EEEEEE;
-	border-spacing: 1px;}
+	border-spacing: 1px;
 
-tr { height: 32px; }
+	tr { height: 32px; }
 
-caption { height: 32px;
-	  color: white;
-	  line-height: 32px;
-	  font-weight: bold;
-	  text-align: center;
-	  vertical-align: middle;
-	  border-radius: 5px 5px 0px 0px;
-	  background-color: @base_shaded; }
+	th { color: black;
+	     height: 28px;
+	     padding: 4px;
+	     text-align: left;
+	     vertical-align: middle;
+	     background-color: @base; }
 
-th { color: black;
-     height: 28px;
-     padding: 4px;
-     text-align: left;
-     vertical-align: middle;
-     background-color: @base; }
+	td { padding: 4px;
+	     text-align: left;
+	     word-break: normal;
+	     vertical-align: middle;
+	     background-color: transparent;
 
-td { padding: 4px;
-     text-align: left;
-     word-break: normal;
-     vertical-align: middle;
-     background-color: transparent }
+	     > input:first-child:last-child { width: 100%;
+					      height: 24px; }
+	}
 
-table > tbody > tr:nth-child(even) { background-color: white; }
-table > tbody > tr:nth-child(odd) { background-color: @base_tinted; }
 
-table > tbody > tr.even { background-color: white}
-table > tbody > tr.odd  { background-color: @base_tinted}
+	> caption { height: 32px;
+		    color: white;
+		    line-height: 32px;
+		    font-weight: bold;
+		    text-align: center;
+		    vertical-align: middle;
+		    border-radius: 5px 5px 0px 0px;
+		    background-color: @base_shaded; }
 
-table > thead > tr > td, table > tfoot > tr > td { background-image: @base_gradient }
+
+	> thead > tr { background-color: @main_tinted }
+
+	> tbody {
+		> tr:nth-child(even) { background-color: white; }
+		> tr:nth-child(odd) { background-color: @base_tinted; }
+		> tr.even { background-color: white}
+		> tr.odd  { background-color: @base_tinted }
+	}
+
+	> tfoot > tr {background-image: @base_gradient; }
+}
 
 td.TOOLTIP { padding: 12px; background-image: none; background-color: #F0F0F4; color: blue; border: 1px dashed gray}
 td.SEPARATOR { padding: 0px; margin: 0px; background-image: none; background-color: #CBCAC9; color: blue; border: 1px dotted gray; height: 0px}
